--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="shortcut icon" href="static/img/title_logo.png">
+    <title>Web-Castle</title>
 </head>
 <body>
 
