--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="static/css/main.css">
-    <link rel="shortcut icon" href="static/img/title_logo.png">
+    <link href="static/css/main.css" rel="stylesheet" type="text/css"/>
+    <link href="static/img/title_logo.png" rel="shortcut icon" type="image/png">
     <title>Web-Castle</title>
 </head>
 <body>
+<div class="header">
+    <img src="static/img/logo.png"/>
+    <ul class="titles">
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">Преимущества</a></li>
+        <li><a href="#">Отзывы</a></li>
+        <li><a href="#">Услуги</a></li>
+        <li><a href="#">Статистика</a></li>
+        <li><a href="#">Заказать</a></li>
+    </ul>
+    <a class="login-button" href="#">Вход</a>
+    <a class="register-button" href="#">Регистрация</a>
+</div>
+<div class="container s">
+    <div class="left-side">
+        <div class="h1">
+            <h1>Мы <span>быстро</span> создадим вам уникальный сайт за <span>выгодную</span> цену.</h1>
+            <p>Наши специалисты сделают всё, чтобы ваш сайт отличался от остальных сайтов на рынке.</p>
+        </div>
+        <div class="button-side">
+            <a class="more-button" href="#">Подробнее</a>
+            <img src="static/img/wave.png"/>
+        </div>
 
+    </div>
+
+</div>
+<img class='arrow' src="static/img/arrow.png"/>
+<img class='tears' src="static/img/tears.png"/>
+<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUIcmlja3JvbGw%3D"><img class='rickroll' src="static/img/rickroll.png"/></a>
+<div></div>
+<img class='photo1' src="static/img/photo1.png"/>
 </body>
 </html>
