--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <li><a href="#">Заказать</a></li>
     </ul>
     <a class="login-button" href="#">Вход</a>
-    <a class="register-button" href="#">Регистрация</a>
+    <a class="register-button" href="/form_sample">Регистрация</a>
 </div>
 <div class="container s">
     <div class="left-side">
