Основная часть готова

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         <li><a href="#">Статистика</a></li>
         <li><a href="#">Заказать</a></li>
     </ul>
-    <a class="login-button" href="#">Вход</a>
+    <a class="login-button" href="/login">Вход</a>
     <a class="register-button" href="/form_sample">Регистрация</a>
 </div>
 <div class="container s">
