--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,10 @@
         <li><a href="#">Статистика</a></li>
         <li><a href="#">Заказать</a></li>
     </ul>
-    <a class="login-button" href="/login">Вход</a>
-    <a class="register-button" href="/form_sample">Регистрация</a>
+    <div class="buttons">
+        <a class="login-button" href="/login">Вход</a>
+        <a class="register-button" href="/form_sample">Регистрация</a>
+    </div>
 </div>
 <div class="container s">
     <div class="left-side">
@@ -36,7 +38,8 @@
 </div>
 <img class='arrow' src="static/img/arrow.png"/>
 <img class='tears' src="static/img/tears.png"/>
-<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUIcmlja3JvbGw%3D"><img class='rickroll' src="static/img/rickroll.png"/></a>
+<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUIcmlja3JvbGw%3D"><img class='rickroll'
+                                                                                 src="static/img/rickroll.png"/></a>
 <div></div>
 <img class='photo1' src="static/img/photo1.png"/>
 </body>
