--- a/templates/index.html
+++ b/templates/index.html
@@ -22,25 +22,27 @@
         <a class="register-button" href="/form_sample">Регистрация</a>
     </div>
 </div>
-<div class="container s">
-    <div class="left-side">
-        <div class="h1">
-            <h1>Мы <span>быстро</span> создадим вам уникальный сайт за <span>выгодную</span> цену.</h1>
-            <p>Наши специалисты сделают всё, чтобы ваш сайт отличался от остальных сайтов на рынке.</p>
-        </div>
-        <div class="button-side">
-            <a class="more-button" href="#">Подробнее</a>
-            <img src="static/img/wave.png"/>
+<div class="intro">
+    <div class="container s">
+        <div class="left-side">
+            <div class="h1">
+                <h1>Мы <span>быстро</span> создадим вам уникальный сайт за <span>выгодную</span> цену.</h1>
+                <p>Наши специалисты сделают всё, чтобы ваш сайт отличался от остальных сайтов на рынке.</p>
+            </div>
+            <div class="button-side">
+                <a class="more-button" href="#">Подробнее</a>
+                <img src="static/img/wave.png"/>
+            </div>
+
         </div>
 
     </div>
-
+    <img class='arrow' src="static/img/arrow.png"/>
+    <img class='tears' src="static/img/tears.png"/>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUIcmlja3JvbGw%3D"><img class='rickroll'
+                                                                                     src="static/img/rickroll.png"/></a>
+    <div></div>
+    <img class='photo1' src="static/img/photo1.png"/>
 </div>
-<img class='arrow' src="static/img/arrow.png"/>
-<img class='tears' src="static/img/tears.png"/>
-<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUIcmlja3JvbGw%3D"><img class='rickroll'
-                                                                                 src="static/img/rickroll.png"/></a>
-<div></div>
-<img class='photo1' src="static/img/photo1.png"/>
 </body>
 </html>
