--- a/static/css/main.css
+++ b/static/css/main.css
@@ -171,3 +171,49 @@ span {
     top: -834px;
     left: 945px;
 }
+.intro {
+    max-width: 1920px;
+    margin: 0 auto;
+}
+p label {
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: light;
+    font-size: 22px;
+    color: #343F52;
+}
+p input {
+    width: 500px;
+    height: 30px;
+    border-radius: 10px;
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: light;
+    font-size: 22px;
+    color: #343F52;
+}
+.window {
+display: flex;
+flex-direction: column;
+gap: 25px;
+align-items: center;
+padding: 40px 0;
+width: 600px;
+border-radius: 20px;
+margin: auto;
+box-shadow: 10px 5px 50px rgba(0,0,0, 0.2);
+vertical-align: middle;
+}
+.check input {
+    width: 28px;
+}
+.check {
+display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.window form {
+display: flex;
+flex-direction: column;
+gap: 20px;
+}
