--- a/static/css/main.css
+++ b/static/css/main.css
@@ -125,6 +125,7 @@ span {
 
 .s {
     background: rgba(240, 240, 248, 1);
+    margin-left:-10px;
 }
 
 .more-button {
@@ -173,7 +174,7 @@ span {
 }
 .intro {
     max-width: 1920px;
-    margin: 0 auto;
+    margin: auto;
 }
 p label {
     font-family: "Space Grotesk", sans-serif;
@@ -191,6 +192,7 @@ p input {
     font-weight: light;
     font-size: 22px;
     color: #343F52;
+    border: 2px solid #605DBA;
 }
 .window {
 display: flex;
@@ -200,7 +202,7 @@ align-items: center;
 padding: 40px 0;
 width: 600px;
 border-radius: 20px;
-margin: auto;
+margin: 0 auto;
 box-shadow: 10px 5px 50px rgba(0,0,0, 0.2);
 vertical-align: middle;
 }
@@ -216,4 +218,28 @@ display: flex;
 display: flex;
 flex-direction: column;
 gap: 20px;
+}
+.submit-button input {
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: 2px solid #605DBA;
+    color: #605DBA;
+    font-weight: 550;
+    transition: all .19s ease-in;
+    background: none;
+    height: 50px;
+}
+.submit-button input:hover {
+    border: 2px solid #605DBA;
+    color: white;
+    background: #605DBA;
+}
+.d input {
+    margin-top: 30px;
+}
+.one {
+    margin-top: 150px;
+}
+.two {
+margin-top: 200px;
 }
