--- a/templates/index.html
+++ b/templates/index.html
@@ -44,5 +44,45 @@
     <div></div>
     <img class='photo1' src="static/img/photo1.png"/>
 </div>
+<div class="container">
+    <div class="name-section">
+        <h4>ЧТО МЫ ДЕЛАЕМ?</h4>
+        <h2>Мы подбираем <span>услуги</span> для <span>удовлетворения</span> потребностей наших заказчиков.</h2>
+    </div>
+    <div class="cards">
+        <div class="floor">
+            <div class="card">
+                <img class="icon" src="static/img/icon1.png" />
+                <div class="about">
+                    <h5>Веб-аналитика</h5>
+                    <p>Duis mollis gravida commodo id luctus erat porttitor ligula, eget lacinia odio sem aget elit.</p>
+                </div>
+            </div>
+             <div class="card">
+                <img class="icon" src="static/img/icon3.png" />
+                <div class="about">
+                    <h5>Веб-дизайн</h5>
+                    <p>Duis mollis gravida commodo id luctus erat porttitor ligula, eget lacinia odio sem aget elit.</p>
+                </div>
+            </div>
+        </div>
+        <div class="floor">
+             <div class="card">
+                <img class="icon" src="static/img/icon4.png" />
+                <div class="about">
+                    <h5>SEO-услуги</h5>
+                    <p>Duis mollis gravida commodo id luctus erat porttitor ligula, eget lacinia odio sem aget elit.</p>
+                </div>
+            </div>
+             <div class="card">
+                <img class="icon" src="static/img/icon2.png" />
+                <div class="about">
+                    <h5>Fullstack-разработка</h5>
+                    <p>Duis mollis gravida commodo id luctus erat porttitor ligula, eget lacinia odio sem aget elit.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
