--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     </div>
     {% endif %}
 </div>
-<div class="intro">
+x
     <div class="container s">
         <div class="left-side">
             <div class="h1">
@@ -87,6 +87,48 @@
             </div>
         </div>
     </div>
+</div>
+<div class="container s">
+    <div class="name-section center">
+        <h4 class="center">ДОВОЛЬНЫЕ КЛИЕНТЫ</h4>
+        <h2 class="center">Вы можете посмотреть, как <span>отзываются</span> о нас заказчики.</h2>
+    </div>
+    <div class="elems">
+        <div class="elem">
+            <div class="stars">
+                <h6>5</h6>
+                <img src="static/img/star.png" alt="" class="star">
+            </div>
+            <p>Отличная компания, помогла сделать для меня сайт, разработав уникальный дизайн и выполнив свою работу чётко и быстро. Я и мои знакомые до сих пор в восторге от проделанной вами работы.</p>
+            <div class="who">
+                <p class="fullname">Миха Мастейнов</p>
+                <p class="status">Менеджер компании “CraftBridge”</p>
+            </div>
+        </div>
+         <div class="elem">
+            <div class="stars">
+                <h6>5</h6>
+                <img src="static/img/star.png" alt="" class="star">
+            </div>
+            <p>Отличная компания, помогла сделать для меня сайт, разработав уникальный дизайн и выполнив свою работу чётко и быстро. Я и мои знакомые до сих пор в восторге от проделанной вами работы.</p>
+            <div class="who">
+                <p class="fullname">Миха Мастейнов</p>
+                <p class="status">Менеджер компании “CraftBridge”</p>
+            </div>
+        </div>
+         <div class="elem">
+            <div class="stars">
+                <h6>4</h6>
+                <img src="static/img/star.png" alt="" class="star">
+            </div>
+            <p>Отличная компания, помогла сделать для меня сайт, разработав уникальный дизайн и выполнив свою работу чётко и быстро. Я и мои знакомые до сих пор в восторге от проделанной вами работы.</p>
+            <div class="who">
+                <p class="fullname">Миха Мастейнов</p>
+                <p class="status">Менеджер компании “CraftBridge”</p>
+            </div>
+        </div>
+    </div>
+
 </div>
 </body>
 </html>
