--- a/templates/all_order.html
+++ b/templates/all_order.html
@@ -1,24 +1,20 @@
 {% block content %}
-    <h1>Журнал работ</h1>
-    {% if current_user.is_authenticated %}
-    <a href="/addjob" class="btn btn-secondary">Добавить работу</a>
-    {% endif %}
+    <h1>Журнал моих работ</h1>
     {% for job in jobs %}
-        <h3>Работа # {{ job.id }}</h3>
         <div>
             <table class="table table-success table-striped">
                 <tr>
                     <td width="400px">Название работы</td>
-                    <td width="150px">Руководитель</td>
-                    <td width="100px" align="center">Продолжительность</td>
-                    <td width="200px" align="center">Исполнители</td>
+                    <td width="150px">Заказчик</td>
+                    <td width="100px" align="center">Описание</td>
+                    <td width="200px" align="center">Стоимость</td>
                     <td width="100px" align="center">Закончена?</td>
                 </tr>
                 <tr>
-                    <td>{{ job.text.capitalize() }}</td>
-                    <td>{{ names[job.name_order]}}</td>
-                    <td align="center">{{ job.work_size }} ч.</td>
-                    <td align="center">{{ job.collaborators }}</td>
+                    <td>{{ job.name_order.capitalize() }}</td>
+                    <td>{{ names}}</td>
+                    <td align="center">{{ job.text }}</td>
+                    <td align="center">{{ job.is_paid }} РУБ.</td>
                     {% if job.is_finished %}
                     <td bgcolor="green" align="center">Закончена</td>
                     {% else %}
@@ -27,11 +23,5 @@
                 </tr>
             </table>
         </div>
-    {% if current_user.is_authenticated and current_user.id == job.team_leader or current_user.id == 1 %}
-        <div>
-            <a href="/editjob/{{ job.id }}" class="btn btn-warning">Редактировать работу</a>
-            <a href="/deletejob/{{ job.id }}" class="btn btn-danger">Удалить работу</a>
-        </div>
-    {% endif %}
     {% endfor %}
 {% endblock %}
