--- a/static/css/main.css
+++ b/static/css/main.css
@@ -57,6 +57,7 @@ a {
     color: #605DBA;
     font-weight: 550;
     transition: all .19s ease-in;
+    align-items: center;
 }
 .login-button:hover {
     border: 2px solid #605DBA;
@@ -384,3 +385,19 @@ display: flex;
 flex-direction: row;
 justify-content: space-between;
 margin-top: 70px;
+}
+.table-style {
+display:flex;
+flex-direction: row;
+margin-top: 30px;
+gap: 20px;
+}
+td {
+color: #343F52;
+font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: medium;
+    font-size: 16px;
+    font-style: normal;
+    width: 200px;
+}
