--- a/templates/all_review.html
+++ b/templates/all_review.html
@@ -1,3 +1,5 @@
+<link href="static/css/main.css" rel="stylesheet" type="text/css"/>
+<link href="static/img/title_logo.png" rel="shortcut icon" type="image/png">
 {% block content %}
     <h1>Все отзывы</h1>
     {% for job in jobs %}
