--- a/templates/index.html
+++ b/templates/index.html
@@ -7,38 +7,39 @@
     <title>Web-Castle</title>
 </head>
 <body>
-<div class="header">
-    <img src="static/img/logo.png"/>
-    {% if current_user.is_authenticated %}
-    <ul class="titles">
-        <li><a href="#">Главная</a></li>
-        <li><a href="#">Услуги</a></li>
-        <li><a href="#">Отзывы</a></li>
-        <li><a href="/order">Заказать</a></li>
-        <li><a href="/orders">Мои заказы</a></li>
-    </ul>
-    <a class="navbar-brand" href="/logout">{{ current_user.login }}</a>
-    {% else %}
-    <ul class="titles">
-        <li><a href="#">Главная</a></li>
-        <li><a href="#">Услуги</a></li>
-        <li><a href="#">Отзывы</a></li>
-    </ul>
-    <div class="buttons">
-        <a class="login-button" href="/login">Вход</a>
-        <a class="register-button" href="/form_sample">Регистрация</a>
+<div class="fix">
+    <div class="header">
+        <img src="static/img/logo.png"/>
+        {% if current_user.is_authenticated %}
+        <ul class="titles">
+            <li><a href="#">Главная</a></li>
+            <li><a href="#2">Услуги</a></li>
+            <li><a href="#3">Отзывы</a></li>
+            <li><a href="/order">Заказать</a></li>
+            <li><a href="/orders">Мои заказы</a></li>
+        </ul>
+        <a class="navbar-brand" href="/logout">{{ current_user.login }}</a>
+        {% else %}
+        <ul class="titles">
+            <li><a href="#">Главная</a></li>
+            <li><a href="#2">Услуги</a></li>
+            <li><a href="#3">Отзывы</a></li>
+        </ul>
+        <div class="buttons">
+            <a class="login-button" href="/login">Вход</a>
+            <a class="register-button" href="/form_sample">Регистрация</a>
+        </div>
+        {% endif %}
     </div>
-    {% endif %}
 </div>
-x
-<div class="container s">
+<div class="container s first">
     <div class="left-side">
         <div class="h1">
             <h1>Мы <span>быстро</span> создадим вам уникальный сайт за <span>выгодную</span> цену.</h1>
             <p>Наши специалисты сделают всё, чтобы ваш сайт отличался от остальных сайтов на рынке.</p>
         </div>
         <div class="button-side">
-            <a class="more-button" href="#">Подробнее</a>
+            <a class="more-button" href="#2">Подробнее</a>
             <img src="static/img/wave.png"/>
         </div>
     </div>
@@ -50,7 +51,7 @@ x
 <div></div>
 <img class='photo1' src="static/img/photo1.png"/>
 </div>
-<div class="container">
+<div id='2'  class="container second">
     <div class="name-section">
         <h4>ЧТО МЫ ДЕЛАЕМ?</h4>
         <h2>Мы подбираем <span>услуги</span> для <span>удовлетворения</span> потребностей наших заказчиков.</h2>
@@ -90,7 +91,7 @@ x
         </div>
     </div>
 </div>
-<div class="container s">
+<div id='3' class="container s cent">
     <div class="name-section center">
         <h4 class="center">ДОВОЛЬНЫЕ КЛИЕНТЫ</h4>
         <h2 class="center">Вы можете посмотреть, как <span>отзываются</span> о нас заказчики.</h2>
@@ -133,7 +134,7 @@ x
             </div>
         </div>
     </div>
-
+    <a href="/reviews" class="register-button bend">Больше отзывов</a>
 </div>
 </body>
 </html>
