--- a/templates/all_order.html
+++ b/templates/all_order.html
@@ -13,22 +13,25 @@
                 </div>
                 <p>Описание: {{ job.text }}</p>
             </div>
-            <div class="who">
-                <p class="fullname">Название: {{ job.name_order }}</p>
-                <p class="status">Заказчик: {{ names }}</p>
-                {% if job.if_finished %}
+            <div class="eee">
+                <div class="who">
+                    <p class="fullname">Название: {{ job.name_order }}</p>
+                    <p class="status">Заказчик: {{ names }}</p>
+                    {% if job.if_finished %}
                     <p class="status">Статус: Закончена</p>
                     {% else %}
                     <p class="status">Статус: Не закончена</p>
                     {% endif %}
+                </div>
+            <div class="marg">
                 {% if job.if_finished and job.id not in review%}
-            <a class="login-button marg" href="/review/{{ job.id }}" >Сделать отзыв</a>
-            {% endif %}
-            {% if job.id in review %}
-            <p>Вы уже оставили отзыв</p>
-            {% endif%}
+                <a class="login-button" href="/review/{{ job.id }}">Сделать отзыв</a>
+                {% endif %}
+                {% if job.id in review %}
+                <p>Вы уже оставили отзыв</p>
+                {% endif%}
             </div>
-
+            </div>
         </div>
         {% endfor %}
     </div>
