--- a/templates/review.html
+++ b/templates/review.html
@@ -3,7 +3,7 @@
 {% block content %}
 <title>Оставить отзыв</title>
 <div class="window two">
-<h1>Оформление заказа</h1>
+<h1>Оформление отзыва</h1>
 <form action="" method="post">
     {{ form.csrf_token }}
     <p>
@@ -29,3 +29,77 @@
 </form>
 {% endblock %}
     </div>
+<style>
+  p label {
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: light;
+    font-size: 22px;
+    color: #343F52;
+}
+p input {
+    width: 500px;
+    height: 30px;
+    border-radius: 10px;
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: light;
+    font-size: 22px;
+    color: #343F52;
+    border: 2px solid #605DBA;
+}
+.window {
+display: flex;
+flex-direction: column;
+gap: 25px;
+align-items: center;
+width: 600px;
+border-radius: 20px;
+margin: 0 auto;
+box-shadow: 10px 5px 50px rgba(0,0,0, 0.2);
+vertical-align: middle;
+}
+.check input {
+    width: 28px;
+}
+.check {
+display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.window form {
+display: flex;
+flex-direction: column;
+gap: 20px;
+}
+.submit-button input {
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: 2px solid #605DBA;
+    color: #605DBA;
+    font-weight: 550;
+    transition: all .19s ease-in;
+    background: none;
+    height: 50px;
+}
+.submit-button input:hover {
+    border: 2px solid #605DBA;
+    color: white;
+    background: #605DBA;
+}
+.d input {
+    margin-top: 30px;
+}
+.two {
+    margin-top: 200px;
+}
+h1 {
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 599;
+    font-size: 50px;
+    font-style: normal;
+    color: #343F52;
+    line-height: 130%;
+}
+</style>
