Добавил много всего

--- a/templates/all_order.html
+++ b/templates/all_order.html
@@ -36,5 +36,5 @@
         {% endfor %}
     </div>
 </div>
-<a class="login-button otz" href="/index#3">Назад</a>
+<a class="login-button otz" href="/index">Назад</a>
 {% endblock %}
