--- a/templates/admin_ed.html
+++ b/templates/admin_ed.html
@@ -1,6 +1,7 @@
+<link href="static/css/main.css" rel="stylesheet" type="text/css"/>
+<link href="static/img/title_logo.png" rel="shortcut icon" type="image/png">
 {% if current_user.admin %}
 {% block content %}
-<link href="static/img/title_logo.png" rel="shortcut icon" type="image/png">
 <title>Вход</title>
 <div class="window two">
     <form action="" method="post">
