--- a/templates/info.html
+++ b/templates/info.html
@@ -1,16 +1,142 @@
-{% block content %}
+<link href="static/css/main.css" rel="stylesheet" type="text/css"/>
 <link href="static/img/title_logo.png" rel="shortcut icon" type="image/png">
-<title>Вход</title>
+{% block content %}
+<title>Личный кабинет</title>
+
     <div class="window two">
+        <h1 class="name-func">Данные</h1>
         <form action="" method="post">
-            {{ user.csrf_token }}
-            <p>
-                имя {{ user.login }}<br>
-                почта {{ user.email }}<br>
-                должность {{ user.position }}<br>
-                пригласительный ключ {{ user.invitation_key }}<br>
-                <a class="navbar-brand" href="/logout">Выйти из аккаунта</a>
+            <p class="info-table">
+                Имя: <span>{{ user.login }}</span><br>
+                Почта: <span>{{ user.email }}</span><br>
+                Должность: <span>{{ user.position }}</span><br>
+                Пригласительный ключ: <span>{{ user.invitation_key }}</span><br>
+
             </p>
+            <a class="submit-button" href="/logout">Выйти из аккаунта</a>
         </form>
         {% endblock %}
     </div>
+<style>
+span {
+font-weight: 500;
+}
+h1 {
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 599;
+    font-size: 50px;
+    font-style: normal;
+    color: #343F52;
+    line-height: 130%;
+     padding: 0;
+    margin: 0px;
+}
+p label {
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: light;
+    font-size: 22px;
+    color: #343F52;
+
+}
+p input {
+    width: 500px;
+    height: 30px;
+    border-radius: 10px;
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: light;
+    font-size: 22px;
+    color: #343F52;
+    border: 2px solid #605DBA;
+}
+.window {
+display: flex;
+flex-direction: column;
+gap: 0px;
+align-items: center;
+padding: 40px 0;
+width: 600px;
+border-radius: 20px;
+margin: 0 auto;
+box-shadow: 10px 5px 50px rgba(0,0,0, 0.2);
+vertical-align: middle;
+}
+.check input {
+    width: 28px;
+}
+.check {
+display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.window form {
+display: flex;
+flex-direction: column;
+gap: 20px;
+}
+.submit-button input {
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: 2px solid #605DBA;
+    color: #605DBA;
+    font-weight: 550;
+    transition: all .19s ease-in;
+    background: none;
+    height: 50px;
+}
+.submit-button input:hover {
+    border: 2px solid #605DBA;
+    color: white;
+    background: #605DBA;
+}
+.d input {
+    margin-top: 30px;
+}
+.one {
+    margin-top: 150px;
+}
+.two {
+margin-top: 200px;
+}
+    .info-table {
+line-height: 50px;
+color: #343F52;
+font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-size: 22px;
+    font-style: normal;
+    width: 500px;
+    align-self: center;
+}
+.submit-button{
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: 2px solid #605DBA;
+    color: #605DBA;
+    font-weight: 550;
+    transition: all .19s ease-in;
+    background: none;
+    height: 50px;
+    text-decoration: none;
+    box-sizing: border-box;
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 600;
+    font-size: 22px;
+    font-style: normal;
+    align-self: center;
+    margin: 0 auto;
+    vertical-align: middle;
+    align-self: start;
+    width: 100%;
+    text-align: center;
+    margin-top: -20px;
+}
+.submit-button:hover {
+    border: 2px solid #605DBA;
+    color: white;
+    background: #605DBA;
+}
+</style>
