--- a/templates/info.html
+++ b/templates/info.html
@@ -13,6 +13,9 @@
                 Пригласительный ключ: <span>{{ user.invitation_key }}</span><br>
 
             </p>
+            {% if current_user.admin %}
+            <a class="submit-button" href="/admin_key">Получить админ ключ</a>
+            {% endif %}
             <a class="submit-button" href="/logout">Выйти из аккаунта</a>
         </form>
         {% endblock %}
