--- a/templates/admin_ed.html
+++ b/templates/admin_ed.html
@@ -1,20 +1,20 @@
-<link href="static/css/main.css" rel="stylesheet" type="text/css"/>
 <link href="static/img/title_logo.png" rel="shortcut icon" type="image/png">
 {% if current_user.admin %}
 {% block content %}
-<title>Вход</title>
+<title>Модерация</title>
 <div class="window two">
+    <h1 class="name-func">Редактировать</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
         {{ form.csrf_token }}
         {% for job in jobs %}
         <p>
-            Нынешняя Стоимость: {{ job.is_paid }}<br>
+            <span>Нынешняя Стоимость: {{ job.is_paid }}<br></span>
             {{form.paid.label}}<br>
             {{ form.paid}}<br>
             {{ form.status.label }}<br>
             {{ form.status }}<br>
-        <p class="submit-button d">{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+        <p class="submit-button">{{ form.submit(type="submit", class="btn btn-primary") }}</p>
         {% endfor %}
     </form>
     {% endblock %}
@@ -22,3 +22,111 @@
 {% else %}
 <h1 class="center">У вас нет доступа к данной странице</h1>
 {% endif %}
+<style>
+span {
+font-weight: 500;
+font-size: 24px;
+line-height: 50px;
+}
+h1 {
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 599;
+    font-size: 50px;
+    font-style: normal;
+    color: #343F52;
+    line-height: 130%;
+     padding: 0;
+    margin: 0px;
+}
+p label {
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: light;
+    font-size: 22px;
+    color: #343F52;
+
+}
+p input {
+    width: 500px;
+    height: 30px;
+    border-radius: 10px;
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: light;
+    font-size: 22px;
+    color: #343F52;
+    border: 2px solid #605DBA;
+}
+.window {
+display: flex;
+flex-direction: column;
+gap: 0px;
+align-items: center;
+padding: 40px 0;
+width: 600px;
+border-radius: 20px;
+margin: 0 auto;
+box-shadow: 10px 5px 50px rgba(0,0,0, 0.2);
+vertical-align: middle;
+}
+.check input {
+    width: 28px;
+}
+.check {
+display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.window form {
+display: flex;
+flex-direction: column;
+gap: 20px;
+}
+.submit-button input {
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: 2px solid #605DBA;
+    color: #605DBA;
+    font-weight: 550;
+    transition: all .19s ease-in;
+    background: white;
+    height: 50px;
+
+}
+.submit-button {
+    margin: 0 auto;
+}
+.submit-button input:hover {
+    border: 2px solid #605DBA;
+    color: white;
+    background: #605DBA;
+}
+.d input {
+    margin-top: 30px;
+}
+.one {
+    margin-top: 150px;
+}
+.two {
+margin-top: 200px;
+}
+    .info-table {
+line-height: 50px;
+color: #343F52;
+font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-size: 22px;
+    font-style: normal;
+    width: 500px;
+    align-self: center;
+}
+p {
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: light;
+    font-size: 22px;
+    color: #343F52;e
+}
+</style>
