--- a/templates/admin_key.html
+++ b/templates/admin_key.html
@@ -8,3 +8,17 @@
 
 </body>
 </html>
+<style>
+    h1 {
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 599;
+    font-size: 50px;
+    font-style: normal;
+    color: #343F52;
+    line-height: 130%;
+     padding: 0;
+    margin: 0 auto;
+    text-align: center;
+}
+</style>
