--- a/templates/all_review.html
+++ b/templates/all_review.html
@@ -15,8 +15,8 @@
                 <p>{{ job.text }}</p>
             </div>
             <div class="who">
-                <p class="fullname">{{ names[job.id + 1]}}</p>
-                <p class="status">{{ pos[job.id + 1]}}</p>
+                <p class="fullname">{{ names[job.id]}}</p>
+                <p class="status">{{ pos[job.id]}}</p>
             </div>
         </div>
         {% endfor %}
